@@ -4,7 +4,10 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2006 Vasco Nunes, Piotr Ożarowski
 
-2006-12-17 Jessica K. Parth <Jessica.K.P@women-at-work.org>
+2006-12-18 Piotr Ożarowski <ozarow@gmail.com>
+	* Detect old DB (and convert it) in restore function
+
+2006-12-18 Jessica K. Parth <Jessica.K.P@women-at-work.org>
 	* tooltips to mange people dialog added
 	* german translation updated (100% finished)
 
